--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           this.load.image("imgRight", "./80x90_gotoRight.png");
           this.load.image("imgStart", "./200x60_start.png");
           this.load.image("imgStop", "./60x60_stop.png");
-          this.load.spritesheet("imgSlot", "./240x80_slotRoll.png", {
-            frameWidth: 80,
-            frameHeight: 80
+          this.load.spritesheet("imgSlot", "./240x80_slots.png", {
+            frameWidth: 200,
+            frameHeight: 200
           });
           this.load.audio("seOK", "seOK.mp3");
           this.load.audio("seNG", "seNG.mp3");
