update for short cut urls

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           super({ key: "MyScene1", active: false });
         }
         preload() {
-          this.load.image("openedRoom1", "./800x600_openedRoom01.png");
+          this.load.image("openedRoom1", "./openedRoom01.png");
           this.load.image("nomalRoom1", "./800x600_room01.png");
           this.load.image("imgLeft", "./80x90_gotoLeft.png");
           this.load.image("imgRight", "./80x90_gotoRight.png");
